--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
+
+
 *.local
 
 # Editor directories and files
@@ -26,3 +26,5 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+
+.vercel
