--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
             "src": "app/package.json",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "app/dist"
+                "distDir": "dist"
             }
         }
     ],
