--- a/app/package.json
+++ b/app/package.json
@@ -74,6 +74,7 @@
 		"@types/node": "^24.9.1",
 		"@types/react": "19.1.8",
 		"@types/react-dom": "19.1.6",
+		"@vitejs/plugin-react": "^5.0.4",
 		"concurrently": "^9.1.2",
 		"cross-env": "^7.0.3",
 		"nodemon": "^3.1.10",
