--- a/app/package.json
+++ b/app/package.json
@@ -68,7 +68,8 @@
 		"tw-animate-css": "^1.2.5",
 		"vaul": "^1.1.2",
 		"zod": "^3.25.76",
-		"zustand": "^5.0.5"
+		"zustand": "^5.0.5",
+		"vite": "^7.0.3"
 	},
 	"devDependencies": {
 		"@types/node": "^24.9.1",
@@ -80,7 +81,6 @@
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"tsx": "^4.19.4",
-		"vite": "^7.0.3"
+		"tsx": "^4.19.4"
 	}
 }
