--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.4",
+		"@vercel/node": "^5.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -67,9 +68,9 @@
 		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.2.5",
 		"vaul": "^1.1.2",
+		"vite": "^7.0.3",
 		"zod": "^3.25.76",
-		"zustand": "^5.0.5",
-		"vite": "^7.0.3"
+		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
 		"@types/node": "^24.9.1",
